@@ -46,6 +46,7 @@ class Graph:
                     continue  # head has no increments stored
                 inc = IO.stick_read_disk_dump(P.result_dir + f'{i}.pkl')
                 self.merge_inc(inc)
+            self.post_process()
             
             # write target (head)
             IO.write_disk_dump(P.result_dir + 'target.pkl', self.main)
@@ -62,6 +63,9 @@ class Graph:
             IO.renew_dir(P.result_dir)
 
     def merge_inc(self, inc):
+        pass
+
+    def post_process(self):
         pass
 
 
@@ -117,9 +121,10 @@ class OptimalGraph(Graph):
                 self.main.update_max(inc[last_obs][1], last_obs)
 
 
-class TransitionGraph:
+class TransitionGraph(Graph):
     def __init__(self, id, is_head) -> None:
         super().__init__(id, is_head)
+        self.stack = list()
 
     def make_new_store(self):
         return TransitionStorage()
@@ -130,45 +135,71 @@ class TransitionGraph:
         else:
             return None
 
-    def store_increments(self, trajectory, total_reward):
-        pt = []
-        last_value = 0
-        for last_obs, pre_action, obs, reward in trajectory[::-1]:
-            last_value = last_value * P.gamma + reward
-            pt.append(last_obs, pre_action, obs, last_value)
-        for last_obs, pre_action, obs, value in pt[::-1]:
-            if obs not in self.increments:
-                self.increments[obs] = {}
-                self.increments[obs]['action'] = [0] * P.num_action
-                self.increments[obs]['parents'] = {}
-            self.increments[obs]['parents'][last_obs] = True
-            if last_obs not in self.increments:
-                info = dict()
-                info['action'] = [0] * P.num_action
-            info['parents'] = []
-            if P.add_obs:
-                info = [pre_action, total_reward, obs]
-                
-            else:
-                info = [pre_action, total_reward]
+    def init_obs(self, a, b):
+        a[b] = dict()
+        a[b]['action'] = np.zeros([P.num_action])
+        a[b]['parents'] = dict()
+        a[b]['reward'] = 0
 
-            if P.sync_mode == P.sync_modes[0]:
-                if last_obs not in self.increments:
-                    self.increments[last_obs] = info
-                    self.increments.update_max(total_reward)
-                elif self.increments.max_value < total_reward:
-                    self.increments[last_obs] = info
-                    self.increments.update_max(total_reward)
-            if P.sync_mode == P.sync_modes[1]:
-                self.increments[last_obs] = info
-                self.increments.update_max(total_reward)
-            if P.sync_mode == P.sync_modes[2]:
-                if last_obs not in self.increments:
-                    self.increments[last_obs] = info
-                    self.increments.update_max(total_reward)
-                elif self.increments.max_value * P.sync_tolerance < total_reward:
-                    self.increments[last_obs] = info
-                    self.increments.update_max(total_reward)
-    
+    def store_increments(self, trajectory, total_reward):
+        # filtering
+        if P.sync_mode == P.sync_modes[0]:
+            if self.increments.max_value >= total_reward:
+                return
+        if P.sync_mode == P.sync_modes[2]:
+            if self.increments.max_value * P.sync_tolerance >= total_reward:
+                return
+
+        # update increment
+        self.increments.add_end(trajectory[-1][2])
+        self.increments.update_max(total_reward)
+        current_value = 0
+        for last_obs, pre_action, obs, reward in trajectory[::-1]:
+            current_value = current_value * P.gamma + reward
+            if obs not in self.increments:
+                self.init_obs(self.increments, obs)
+            self.increments[obs]['parents'][last_obs] = pre_action
+            self.increments[obs]['reward'] = reward
+            if last_obs not in self.increments:
+                self.init_obs(self.increments, last_obs)
+
+            if self.increments[last_obs]['action'][pre_action] < current_value:
+                self.increments[last_obs]['action'][pre_action] = current_value  # may over estimate the value
+
     def merge_inc(self, inc):
-        pass
+        for last_obs in inc:
+            if last_obs not in self.main:
+                self.main[last_obs] = inc[last_obs]
+            else:
+                for p in inc[last_obs]['parents']:
+                    self.main[last_obs]['parents'][p] = inc[last_obs]['parents'][p]
+                    
+                self.main[last_obs]['action'] = np.maximum(
+                    self.main[last_obs]['action'],
+                    inc[last_obs]['action']
+                )
+                self.main[last_obs]['reward'] = max(
+                    self.main[last_obs]['reward'],
+                    inc[last_obs]['reward']
+                )
+
+        self.main.update_max(inc.max_value)
+        for e in inc.ends:
+            self.main.ends.add(e)
+
+    def post_process(self):
+        for _ in range(P.num_bp):
+            for e in self.main.ends:
+                self.stack.append(e)
+            self.back_propagation()
+
+    def back_propagation(self):
+        while len(self.stack) > 0:
+            cur_obs = self.stack.pop()
+            max_value = max(self.main[cur_obs]['action'])
+            for par_obs in self.main[cur_obs]['parents']:
+                action = self.main[cur_obs]['parents'][par_obs]
+                new_value = max_value * P.gamma + self.main[cur_obs]['reward']
+                if self.main[par_obs]['action'][action] < new_value:
+                    self.main[par_obs]['action'][action] = new_value
+                self.stack.append(par_obs)
