@@ -1,3 +1,5 @@
+210630 value propagation (slow)
+210630 transition graph
 210630 run 26 atari games
 210629 add mixed sync mode
 210627 sync mode
